# Coding-Camp-II-Project3-QRScanner

./: CMakeLists.txt  Project3.slnx  README.md
Project3/: FileDialog.cpp  FileDialog.h  Project3.vcxproj  Project3.vcxproj.filters  QRScanner.cpp  QRScanner.h  main.cpp
